--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -11,6 +11,7 @@
 	"author": "Ville Heilala",
 	"license": "MIT",
 	"dependencies": {
+		"bcrypt": "^3.0.2",
 		"body-parser": "^1.18.3",
 		"cors": "^2.8.4",
 		"dotenv": "^6.1.0",
