--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -16,6 +16,7 @@
 		"cors": "^2.8.4",
 		"dotenv": "^6.1.0",
 		"express": "^4.16.4",
+		"jsonwebtoken": "^8.3.0",
 		"mongoose": "^5.3.8"
 	},
 	"devDependencies": {
