--- a/part7/bloglist-frontend/package.json
+++ b/part7/bloglist-frontend/package.json
@@ -29,7 +29,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint": "^6.7.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.0.4",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest-dom": "^4.0.0",
     "react-testing-library": "^8.0.1"
   }
