--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.7.0",
-    "graphql": "^14.4.2"
+    "apollo-server": "^2.9.12",
+    "graphql": "^14.5.8",
+    "mongoose": "^5.7.12",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^2.0.1"
   }
 }
