--- a/part8/library-frontend/package.json
+++ b/part8/library-frontend/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.4.3",
-    "graphql": "^14.4.2",
-    "react": "^16.8.6",
-    "react-apollo": "^3.0.0-beta.4",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.8",
+    "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
