--- a/part8/library-frontend/package.json
+++ b/part8/library-frontend/package.json
@@ -7,6 +7,7 @@
     "apollo-link": "^1.2.13",
     "apollo-link-context": "^1.0.19",
     "graphql": "^14.5.8",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
