--- a/part8/library-frontend/package.json
+++ b/part8/library-frontend/package.json
@@ -6,12 +6,14 @@
     "apollo-boost": "^0.4.4",
     "apollo-link": "^1.2.13",
     "apollo-link-context": "^1.0.19",
+    "apollo-link-ws": "^1.0.19",
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
